//protoc --go_out=paths=source_relative:. --go-grpc_out=paths=source_relative:.  quiz.proto
syntax = "proto3";

package proto;

option go_package ="grpcPractive/proto";

message Question {
    int32 id = 1;
    string questionText = 2;
    repeated string answerText = 3;
    int32 correctOption = 4;
}

message User {
    string user = 1;
}

message ConfirmationResponse {
    bool value = 1;
}

message VoteRequest {
    int32 question_id = 1;
    // vote is the index into the answerText slice
    int32 vote = 2;
    User user = 3;
}

message Void {}


service Quiz {
    rpc Next(stream Question) returns (Void);       // QuizMaster sends all question to the server
    rpc Signup(User) returns (stream Question);     // Establishes a stream to the server, so signup users get a stream of questions as they move on
    rpc Vote(VoteRequest) returns (User);           // Returns the user that won that round
}